--- a/admin/app/auth.html
+++ b/admin/app/auth.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="../../static/admin/css/common.css">
     <link rel="stylesheet" type="text/css" href="../../static/flat-ui/css/flat-ui.css">
     <link rel="stylesheet" href="../../static/jquery/css/jquery-ui-1.10.2.custom.css" >
-    <title>为授权应用</title>
+    <title>授权应用</title>
 </head>
 <body>
     <div class="nav-base">
@@ -24,15 +24,15 @@
         <div class="div-border">
             <div class="div-float div-li">
                 <div class="div-border-base li-he">
-                    <a class="no-active" id="app-verify" href="app_verify.html">
+                    <a class="no-active" id="app-verify" href="verify.html">
                         应用审核
                         <span id="app-verify-warn"></span>
                     </a>
                 </div>
-                <div class="div-border-base li-he"><a class="no-active" id="app-auth" href="app_auth.html">授权应用</a></div>
-                <div class="div-border-base li-he"><a class="active" id="app-no-auth" href="#">未授权应用</a></div>
-                <div class="div-border-base li-he"><a class="no-active" id="app-user" href="../user/user_list.html">开发者</a></div>
-                <div class="div-border-base li-he"><a class="no-active" id="app-msg" href="../msg/msg_list.html">消息推送</a></div>
+                <div class="div-border-base li-he"><a class="active" id="app-auth" href="#">授权应用</a></div>
+                <div class="div-border-base li-he"><a class="no-active" id="app-no-auth" href="no_auth.html">未授权应用</a></div>
+                <div class="div-border-base li-he"><a class="no-active" id="app-user" href="../user/list.html">开发者</a></div>
+                <div class="div-border-base li-he"><a class="no-active" id="app-msg" href="../msg/list.html">消息推送</a></div>
             </div>
 
             <div class="div-float div-content">
@@ -67,7 +67,7 @@
                                     2015-2-28
                                 </td>
                                 <td>
-                                    QQ
+                                    360
                                 </td>
                                 <td>
                                     andrew
