--- a/admin/app/verify.html
+++ b/admin/app/verify.html
@@ -15,7 +15,7 @@
             后台管理系统
         </div>
         <div class="nav-base-action">
-            <label>1916508685@qq.com</label>
+            <label>andrew@github.com</label>
             <a href="../../index.html">注销</a>
         </div>
     </div>
@@ -29,10 +29,10 @@
                         <span id="app-verify-warn"></span>
                     </a>
                 </div>
-                <div class="div-border-base li-he"><a class="no-active" id="app-auth" href="app_auth.html">授权应用</a></div>
-                <div class="div-border-base li-he"><a class="no-active" id="app-no-auth" href="app_no_auth.html">未授权应用</a></div>
-                <div class="div-border-base li-he"><a class="no-active" id="app-user" href="../user/user_list.html">开发者</a></div>
-                <div class="div-border-base li-he"><a class="no-active" id="app-msg" href="../msg/msg_list.html">消息推送</a></div>
+                <div class="div-border-base li-he"><a class="no-active" id="app-auth" href="auth.html">授权应用</a></div>
+                <div class="div-border-base li-he"><a class="no-active" id="app-no-auth" href="no_auth.html">未授权应用</a></div>
+                <div class="div-border-base li-he"><a class="no-active" id="app-user" href="../user/list.html">开发者</a></div>
+                <div class="div-border-base li-he"><a class="no-active" id="app-msg" href="../msg/list.html">消息推送</a></div>
             </div>
 
             <div class="div-float div-content">
@@ -74,7 +74,7 @@
                                 <td>
                                     android ios
                                 </td>
-                                <td><a href="app_info.html">详情</a></td>
+                                <td><a href="info.html">详情</a></td>
                             </tr>
                         </tbody>
                     </table>
