--- a/admin/msg/list.html
+++ b/admin/msg/list.html
@@ -24,14 +24,14 @@
         <div class="div-border">
             <div class="div-float div-li">
                 <div class="div-border-base li-he">
-                    <a class="no-active" id="app-verify" href="../app/app_verify.html">
+                    <a class="no-active" id="app-verify" href="../app/verify.html">
                         应用审核
                         <span id="app-verify-warn"></span>
                     </a>
                 </div>
-                <div class="div-border-base li-he"><a class="no-active" id="app-auth" href="../app/app_auth.html">授权应用</a></div>
-                <div class="div-border-base li-he"><a class="no-active" id="app-no-auth" href="../app/app_no_auth.html">未授权应用</a></div>
-                <div class="div-border-base li-he"><a class="no-active" id="app-user" href="../user/user_list.html">开发者</a></div>
+                <div class="div-border-base li-he"><a class="no-active" id="app-auth" href="../app/auth.html">授权应用</a></div>
+                <div class="div-border-base li-he"><a class="no-active" id="app-no-auth" href="../app/no_auth.html">未授权应用</a></div>
+                <div class="div-border-base li-he"><a class="no-active" id="app-user" href="../user/list.html">开发者</a></div>
                 <div class="div-border-base li-he"><a class="active" id="app-msg" href="#">消息推送</a></div>
             </div>
 
@@ -69,7 +69,7 @@
                                 <td>
                                     发布上线了！
                                 </td>
-                                <td><a href="msg_info.html">详情</a></td>
+                                <td><a href="info.html">详情</a></td>
                             </tr>
                         </tbody>
                     </table>
