--- a/admin/user/info.html
+++ b/admin/user/info.html
@@ -24,21 +24,21 @@
         <div class="div-border">
             <div class="div-float div-li">
                 <div class="div-border-base li-he">
-                    <a class="no-active" id="app-verify" href="../app/app_verify.html">
+                    <a class="no-active" id="app-verify" href="../app/verify.html">
                         应用审核
                         <span id="app-verify-warn"></span>
                     </a>
                 </div>
-                <div class="div-border-base li-he"><a class="no-active" id="app-auth" href="../app/app_auth.html">授权应用</a></div>
-                <div class="div-border-base li-he"><a class="no-active" id="app-no-auth" href="../app/app_no_auth.html">未授权应用</a></div>
-                <div class="div-border-base li-he"><a class="active" id="app-user" href="user_list.html">开发者</a></div>
-                <div class="div-border-base li-he"><a class="no-active" id="app-msg" href="../msg/msg_list.html">消息推送</a></div>
+                <div class="div-border-base li-he"><a class="no-active" id="app-auth" href="../app/auth.html">授权应用</a></div>
+                <div class="div-border-base li-he"><a class="no-active" id="app-no-auth" href="../app/no_auth.html">未授权应用</a></div>
+                <div class="div-border-base li-he"><a class="active" id="app-user" href="list.html">开发者</a></div>
+                <div class="div-border-base li-he"><a class="no-active" id="app-msg" href="../msg/list.html">消息推送</a></div>
             </div>
 
             <div class="div-float div-content">
                 <div class="sdk-user-info">
                     <div class="sdk-user-info-return">
-                        <a href="user_list.html">返回</a>
+                        <a href="list.html">返回</a>
                     </div>
                 </div>
 
