--- a/admin/user/login.html
+++ b/admin/user/login.html
@@ -26,7 +26,7 @@
                 <div>
                     <input type="password" name="password" id="password" placeholder="密码"><br>
                 </div>
-                <div class="btn-primary user-login-submit cursor-pointer">
+                <div class="btn-primary admin-login-submit cursor-pointer">
                      登录
                 </div>
                 <div class="admin-login-error-msg"></div>
