--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>后台管理系统首页</title>
 </head>
 <body>
+
     <div class="nav-base">
         <div class="nav-base-title">
             后台管理系统
@@ -20,7 +21,7 @@
         </div>
     </div>
 
-    <div class="container main" id="wrap_container" style="background: url(static/images/index/index.jpg);background-size:cover;">
+    <div class="container" id="wrap_container" style="">
 
     </div> <!-- /container -->
 
