--- a/admin/app/info.html
+++ b/admin/app/info.html
@@ -24,20 +24,20 @@
         <div class="div-border">
             <div class="div-float div-li">
                 <div class="div-border-base li-he">
-                    <a class="active" id="app-verify" href="../app/app_verify.html">
+                    <a class="active" id="app-verify" href="verify.html">
                         应用审核
                         <span id="app-verify-warn"></span>
                     </a>
                 </div>
-                <div class="div-border-base li-he"><a class="no-active" id="app-auth" href="app_auth.html">授权应用</a></div>
-                <div class="div-border-base li-he"><a class="no-active" id="app-no-auth" href="app_no_auth.html">未授权应用</a></div>
-                <div class="div-border-base li-he"><a class="no-active" id="app-user" href="../user/user_list.html">开发者</a></div>
-                <div class="div-border-base li-he"><a class="no-active" id="app-msg" href="../msg/msg_list.html">消息推送</a></div>
+                <div class="div-border-base li-he"><a class="no-active" id="app-auth" href="auth.html">授权应用</a></div>
+                <div class="div-border-base li-he"><a class="no-active" id="app-no-auth" href="no_auth.html">未授权应用</a></div>
+                <div class="div-border-base li-he"><a class="no-active" id="app-user" href="../user/list.html">开发者</a></div>
+                <div class="div-border-base li-he"><a class="no-active" id="app-msg" href="../msg/list.html">消息推送</a></div>
             </div>
 
             <div class="div-float div-content">
                 <div class="app-info-main">
-                    <div class="app-verify-return"><a href="app_verify.html">返回</a></div>
+                    <div class="app-verify-return"><a href="verify.html">返回</a></div>
                     <input type="hidden" id="" value="">
                     <div class="base-info">
                         <div class="app-base-info">
