--- a/admin/user/register.html
+++ b/admin/user/register.html
@@ -14,7 +14,7 @@
         后台管理系统
     </div>
 
-    <div class="container main" id="wrap_container">
+    <div class="container" id="wrap_container">
         <div class="admin-register">
             <div class="admin-register-head">
                 注册
@@ -30,7 +30,7 @@
                     <input type="password" name="password2" id="password2" placeholder="密码确认"><br>
                 </div>
                 <div class="admin-register-error-msg"></div>
-                <div class="btn-primary user-register-submit cursor-pointer">
+                <div class="btn-primary admin-register-submit cursor-pointer">
                     注册
                 </div>
             </div>
